Removed needless creation of Boolean instances in XML code (CASTOR-2548).